chore: prepare Episort 0.2.0